--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "clarifai": "^2.6.0",
+    "cross-env": "^5.2.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-particles-js": "^2.1.1",
@@ -12,9 +13,10 @@
     "tachyons": "^4.9.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "dev": "cross-env REACT_APP_API_URL=http://localhost:8000 react-scripts start",
+    "start": "cross-env REACT_APP_API_URL=https://dry-mountain-87457.herokuapp.com react-scripts start",
+    "build": "cross-env REACT_APP_API_URL=https://dry-mountain-87457.herokuapp.com react-scripts build",
+    "test": "cross-env REACT_APP_API_URL=http://localhost:8000 react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
