--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "clarifai": "^2.6.0",
     "cross-env": "^5.2.0",
     "react": "^16.3.0",
@@ -10,6 +11,7 @@
     "react-particles-js": "^2.1.1",
     "react-scripts": "1.1.1",
     "react-tilt": "^0.1.4",
+    "reactstrap": "^7.1.0",
     "tachyons": "^4.9.1"
   },
   "scripts": {
