--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "tachyons": "^4.9.1"
   },
   "scripts": {
-    "dev": "cross-env REACT_APP_API_URL=http://localhost:8000 react-scripts start",
+    "dev": "cross-env REACT_APP_API_URL=http://192.168.99.100:3000 react-scripts start",
     "start": "cross-env REACT_APP_API_URL=https://dry-mountain-87457.herokuapp.com react-scripts start",
     "build": "cross-env REACT_APP_API_URL=https://dry-mountain-87457.herokuapp.com react-scripts build",
-    "test": "cross-env REACT_APP_API_URL=http://localhost:8000 react-scripts test --env=jsdom",
+    "test": "cross-env REACT_APP_API_URL=http://192.168.99.100:3000 react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
